# pkpdbuilder

./: .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
benchmark/: BENCHMARK.md  full_results.json  results.json  run_benchmark.py  run_full_benchmark.py
models/advanced/: count_poisson.json  tte_weibull.json
models/pd/: pd_direct_emax.json  pd_direct_emax_sigmoid.json  pd_direct_imax.json  pd_direct_imax_partial.json  pd_direct_imax_sigmoid.json  pd_effect_cmt_emax.json  pd_effect_cmt_emax_sigmoid.json  pd_effect_cmt_imax.json  pd_effect_cmt_imax_partial.json  pd_idr1_imax.json  pd_idr1_imax_sigmoid.json  pd_idr2_imax.json  pd_idr2_imax_sigmoid.json  pd_idr3_emax.json  pd_idr3_emax_sigmoid.json  pd_idr4_emax.json  pd_idr4_emax_sigmoid.json  pd_linear.json
models/pk/: pk_1cmt_iv_bolus.json  pk_1cmt_iv_bolus_mm.json  pk_1cmt_iv_infusion.json  pk_1cmt_iv_infusion_mm.json  pk_1cmt_oral.json  pk_1cmt_oral_allometric.json  pk_1cmt_oral_mm.json  (+21 more)
pkpdbuilder/: __init__.py  agent.py  audit.py  cli.py  config.py  learner.py  r_bridge.py  session.py
pkpdbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
r-scripts/: diagnostics.R  individual_fits.R  population_sim.R
reference/: __init__.py  backends.py  config.py  data.py  data_qc.py  memory.py  model_library.py  nca.py  nlmixr2.py  report.py  shiny.py  simulation.py
src/: agent.ts  banner.ts  cli.ts  config.ts  discovery.ts  index.ts  literature.ts  mcp-server.ts  models.ts  r-bridge.ts  repl.ts  server.ts  setup.ts  types.ts
(+66 files in other folders)
