[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkpdbuilder"
version = "0.1.0"
description = "The Pharmacometrician's Co-Pilot — AI-powered PopPK/PKPD analysis from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "click>=8.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.30.0"]
google = ["google-generativeai>=0.8.0"]
all = ["anthropic>=0.40.0", "openai>=1.30.0", "google-generativeai>=0.8.0"]

[project.scripts]
pkpdbuilder = "pkpdbuilder.cli:main"

[tool.setuptools.data-files]
"share/pkpdbuilder/example_data" = ["example_data/*.csv"]

[tool.setuptools.packages.find]
include = ["pkpdbuilder*"]

[tool.setuptools.package-data]
"pkpdbuilder" = ["r_scripts/*.R"]
"pkpdbuilder.models" = ["**/*.py"]
